--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -51,7 +50,9 @@
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.8.1",
-    "zustand": "https://esm.sh/zustand@^5.0.8"
+    "zustand": "https://esm.sh/zustand@^5.0.8",
+    "recharts": "https://esm.sh/recharts@^2.12.7",
+    "tesseract.js": "https://esm.sh/tesseract.js@^5.0.5"
   }
 }
 </script>
