--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.8.1",
     "zustand": "https://esm.sh/zustand@^5.0.8",
     "recharts": "https://esm.sh/recharts@^2.12.7",
-    "tesseract.js": "https://esm.sh/tesseract.js@^5.0.5"
+    "tesseract.js": "https://esm.sh/tesseract.js@^5.0.5",
+    "zustand/": "https://esm.sh/zustand@^5.0.8/"
   }
 }
 </script>
