--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     "zustand": "https://esm.sh/zustand@^5.0.8",
     "recharts": "https://esm.sh/recharts@^2.12.7",
     "tesseract.js": "https://esm.sh/tesseract.js@^5.0.5",
-    "zustand/": "https://esm.sh/zustand@^5.0.8/"
+    "zustand/": "https://esm.sh/zustand@^5.0.8/",
+    "@google/genai": "https://esm.sh/@google/genai@0.14.0",
+    "jszip": "https://esm.sh/jszip@3.10.1"
   }
 }
 </script>
